@startuml ER Diagram

entity users {
    * id : UUID <<generated>>
    --
    * email : TEXT
    * name : TEXT
    * password_hash : TEXT
    * type : TEXT
}

entity subjects {
    * id : UUID <<generated>>
    --
    * name : TEXT
    * slug : TEXT
}

entity exams {
    * id : UUID <<generated>>
    --
    * name : TEXT
    * slug : TEXT
    * subject_id : UUID <<FK>>
    start_time : TIMESTAMP
    finish_time : TIMESTAMP
}

entity questions {
    * id : UUID <<generated>>
    --
    * question : TEXT
    * type : TEXT
    * marks : INTEGER
    * exam_id : UUID <<FK>>
}

entity options {
    * id : UUID <<generated>>
    --
    * answer : TEXT
    * correct : BOOLEAN
    * question_id : UUID <<FK>>
}

entity exam_submissions {
    * id : UUID <<generated>>
    --
    * user_id : UUID <<FK>>
    * exam_id : UUID <<FK>>
    marks : INTEGER
}

entity question_submissions {
    * id : UUID <<generated>>
    --
    answer : TEXT
    * exam_submission_id : UUID <<FK>>
    * question_id : UUID <<FK>>
}

entity instructor_subjects {
    * id : UUID <<generated>>
    --
    * user_id : UUID <<FK>>
    * subject_id : UUID <<FK>>
}

entity enrolments {
    * id : UUID <<generated>>
    --
    * user_id : UUID <<FK>>
    * subject_id : UUID <<FK>>
}

subjects ||--o{ exams
exams ||--|{ questions
users ||--o{ exam_submissions
exams ||--o{ exam_submissions
exam_submissions ||--o{ question_submissions
questions ||--o{ question_submissions
questions ||--o{ options

users ||--o{ instructor_subjects
users ||--o{ enrolments

subjects ||-|{ instructor_subjects
subjects ||-|{ enrolments

@enduml
